--- a/docs/toc.yml
+++ b/docs/toc.yml
@@ -479,7 +479,7 @@ items:
 
         - name: ISV considerations for landing zones
           href: ready/landing-zone/isv-landing-zone.md
-        - name: Partner landing zones
+        - name: Get landing zone help
           href: ready/landing-zone/partner-landing-zone.md
 
       - name: Align
