updated TOC on Learn wording for title

--- a/docs/scenarios/azure-hpc/toc.yml
+++ b/docs/scenarios/azure-hpc/toc.yml
@@ -104,7 +104,7 @@ items:
     - name: Example
       href: /azure
 
-  - name: Build skills on Learn - Add links to Learn modules
+  - name: Build skills on Learn
 
     items:
     - name: Learning path for running HPC applications
