--- a/docs/toc.yml
+++ b/docs/toc.yml
@@ -1197,7 +1197,7 @@ items:
             - name: Event-driven applications
               items:
               - name: Learning path for creating serverless applications
-                href: /learn/paths/create-serverless-applications/
+                href: /training/paths/create-serverless-applications/
               - name: Azure Functions developer guide
                 href: /azure/azure-functions/functions-reference?bc=/azure/cloud-adoption-framework/_bread/toc.json&toc=/azure/cloud-adoption-framework/toc.json
               - name: Azure Serverless Computing Cookbook
@@ -1947,7 +1947,7 @@ items:
       - name: Docs for product implementation
         href: /
       - name: Learn to develop skills
-        href: /learn/
+        href: /training/
       - name: Assessments to personalize guidance
         href: /assessments/
 
