--- a/docs/scenarios/azure-hpc/toc.yml
+++ b/docs/scenarios/azure-hpc/toc.yml
@@ -114,6 +114,10 @@ items:
       href: /azure/architecture/topics/high-performance-computing#example-hpc-architectures
     - name: Energy example architecture
       href: energy/compute.md#hpc-reference-architecture
+    - name: Finance example architecture
+      href: azure-hpc-landing-zone-accelator.md#example-conceptual-finance-reference-architecture
+    - name: Manufacturing example architecture
+      href: azure-hpc-landing-zone-accelator.md#example-conceptual-manufacturing-reference-architecture
 
   - name: Azure product documentation
     items:
