--- a/docs/toc.yml
+++ b/docs/toc.yml
@@ -1373,6 +1373,8 @@ items:
           href: govern/guides/standard/cost-management-improvement.md
         - name: Multicloud scenarios
           href: govern/guides/standard/multicloud-improvement.md
+        - name: Migrate Azure Landing Zone policies to Azure Built-in policies
+          href: govern/guides/standard/update-alz-policies.md
       - name: Governance guide for complex enterprises
         items:
         - name: Overview
