--- a/docs/scenarios/azure-hpc/toc.yml
+++ b/docs/scenarios/azure-hpc/toc.yml
@@ -22,7 +22,7 @@ items:
         - name: Compute
           href: energy/compute.md
         - name: Storage
-          href: energy/storage.md
+          href: energy/starage.md
         - name: Resource organization
           href: energy/resource-organization.md
         - name: Security
