--- a/docs/toc.yml
+++ b/docs/toc.yml
@@ -25,6 +25,8 @@ items:
       href: scenarios/wvd/index.md
     - name: Retail industry
       href: industry/retail/index.md
+    - name: Defense
+      href: scenarios/defense/index.md
 
   - name: Adoption journeys
     items:
