--- a/docs/scenarios/defense/toc.yml
+++ b/docs/scenarios/defense/toc.yml
@@ -2,7 +2,7 @@ items:
   - name: Defense cloud adoption - Microsoft Cloud Adoption Framework for Azure
     href: index.md
     pdf_name: Defense cloud adoption - Microsoft Cloud Adoption Framework for Azure
-  - name: Mission
+  - name: Mission domain
     items:
     - name: Strategy
       href: strategy.md
@@ -10,13 +10,13 @@ items:
       href: plan.md
     - name: Organize
       href: organize.md
-  - name: Platform
+  - name: Platform domain
     items:
       - name: Ready
         href: ready.md
       - name: Govern
         href: govern.md
-  - name: Workload
+  - name: Workload domain
     items:
       - name: Adopt
         href: adopt.md
