--- a/docs/scenarios/azure-hpc/toc.yml
+++ b/docs/scenarios/azure-hpc/toc.yml
@@ -79,7 +79,7 @@ items:
           href: manufacturing/platform-automation-devops.md
     - name: Implementation options
       items:
-      - name: Enterprise-scale for Azure high-performance computing (HPC)
+      - name: HPC landing zone accelerator
         href: azure-hpc-landing-zone-accelator.md
       - name: Compute manufacturing architecture
         href: /azure/architecture/industries/manufacturing/compute-manufacturing-overview
